--- a/src/app/passengers/components/child-forms/child-forms.component.html
+++ b/src/app/passengers/components/child-forms/child-forms.component.html
@@ -1,12 +1,39 @@
 <div class="childForm">
-    <h3>Child infos:</h3>
+  <h3>Child infos:</h3>
+  <!-- <form #form="ngForm" noValidate (ngSubmit)="submit(form.value)"> -->
+  <form #form="ngForm" noValidate (ngSubmit)="submit(form.value)">
     <label>Full Name:</label>
-    <input type="text" [(ngModel)]="child.name" required="required" />
-    <hr>
+    <input
+      type="text"
+      name="name"
+      [(ngModel)]="child.name"
+      required="required"
+      #name="ngModel"
+      minlength="3"
+
+    />
+    <div class="error" *ngIf="name.errors?.required && name?.dirty">
+      this field is required
+    </div>
+    <div class="error" *ngIf="name.errors?.minlength && name?.dirty">
+      this field requires minimum 3 characters
+    </div>
+    <hr />
     <label>Age:</label>
-    <input type="number" [(ngModel)]="child.age" min="1"  required="required" />
-    <hr>
-    <button (click)="submitChild()">Submit Child</button>
+    <input
+      type="number"
+      name="age"
+      [(ngModel)]="child.age"
+      min="1"
+      required="required"
+      #age="ngModel"
+
+    />
+    <div class="error" *ngIf="age.errors?.required && age?.dirty">
+        this field is required
+      </div>
+    <hr />
+    <button type="submit" [disabled]="form.invalid">Submit Child</button>
     <button (click)="cancelAddingChild()">Cancel</button>
-    
+  </form>
 </div>
